# voxel-engine

./: CMakeLists.txt  README.md
assets/: vertex.glsl
include/: constants.hpp  engine.hpp
include/core/: window.hpp
include/platform/: camera.hpp  input_manager.hpp  renderer.hpp  window.hpp
include/utils/: camera.hpp  delta_time.hpp  input_manager.hpp  shader.hpp
include/world/: block.hpp  block_type.hpp  chunk.hpp  world_generator.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/noise/: fast_noise_lite.h
src/: engine.cpp  main.cpp
src/core/: window.cpp
src/platform/: camera.cpp  input_manager.cpp  renderer.cpp  window.cpp
src/utils/: camera.cpp  input_manager.cpp  shader.cpp
src/world/: chunk.cpp  world_generator.cpp
